--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.17.2",
     "express": "4.15.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "sinon": "2.4.1",
     "tap": "10.7.0"
   }
